--- a/Final_project_website/index.html
+++ b/Final_project_website/index.html
@@ -19,8 +19,9 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
+						<li><a href="#Introduction">Introduction</a></li>
+						<li><a href="#WhyDangerous">Why Dangerous</a></li>
+						<li><a href="#Do">What to Do</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -29,7 +30,7 @@
 
 		<!-- Banner -->
 			<section id="banner">
-				<h2>Spatial</h2>
+				<h2>CoronaVirus</h2>
 				<p>Lorem ipsum dolor sit amet nullam consequat <br /> interdum vivamus donce sed libero.</p>
 				<ul class="actions">
 					<li><a href="#" class="button special big">Get Started</a></li>
@@ -37,12 +38,12 @@
 			</section>
 
 			<!-- One -->
-				<section id="one" class="wrapper style1">
+				<section id="Introduction" class="wrapper style1">
 					<div class="container 75%">
 						<div class="row 200%">
 							<div class="6u 12u$(medium)">
 								<header class="major">
-									<h2>Maecenas luctus lectus</h2>
+									<h2>Introduction</h2>
 									<p>Perspiciatis doloremque recusandae dolor</p>
 								</header>
 							</div>
@@ -55,10 +56,10 @@
 				</section>
 
 			<!-- Two -->
-				<section id="two" class="wrapper style2 special">
+				<section id="WhyDangerous" class="wrapper style2 special">
 					<div class="container">
 						<header class="major">
-							<h2>Fusce ultrices fringilla</h2>
+							<h2>Why Can COVID - 19 be Dangerous</h2>
 							<p>Maecenas vitae tellus feugiat eleifend</p>
 						</header>
 						<div class="row 150%">
@@ -83,10 +84,10 @@
 				</section>
 
 			<!-- Three -->
-				<section id="three" class="wrapper style1">
+				<section id="Do" class="wrapper style1">
 					<div class="container">
 						<header class="major special">
-							<h2>Mauris vulputate dolor</h2>
+							<h2>What can we do to stop the spread?</h2>
 							<p>Feugiat sed lorem ipsum magna</p>
 						</header>
 						<div class="feature-grid">
@@ -135,10 +136,10 @@
 				</section>
 
 			<!-- Four -->
-				<section id="four" class="wrapper style3 special">
+				<section id="Conclusion" class="wrapper style3 special">
 					<div class="container">
 						<header class="major">
-							<h2>Aenean elementum ligula</h2>
+							<h2>Conclusion</h2>
 							<p>Feugiat sed lorem ipsum magna</p>
 						</header>
 						<ul class="actions">
@@ -150,10 +151,11 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="container">
+					<h2>About Us</h2>
 					<ul class="icons">
-						<li><a href="#" class="icon fa-facebook"></a></li>
-						<li><a href="#" class="icon fa-twitter"></a></li>
-						<li><a href="#" class="icon fa-instagram"></a></li>
+						<li><a href="www.linkedin.com/in/hongyang-bobby-zheng" class="icon fa-linkedin"></a>  Hongyang(Bobby) Zheng  </li>
+						<li><a href="#" class="icon fa-linkedin"></a> Thyne Boonmark  </li>
+						<li><a href="#" class="icon fa-linkedin"></a> Wenqi Luo  </li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Untitled</li>
